--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ol-contextmenu": "^5.3.0",
     "ol-ext": "^4.0.14",
     "oltb": "^2.1.0",
+    "oltb-mira": "^1.1.2",
     "pinia": "^2.0.11",
     "quasar": "^2.8.0",
     "vue": "^3.2.29",
